--- a/exhibit4.html
+++ b/exhibit4.html
@@ -24,13 +24,8 @@
     </header>
 
       <div class="content">
-        <h2>Exhibit 4: Visuals of The Occult</h2>
-        <h3> By: Alexa Jade Frankelis</h3>
-        <p> <a href="https://themourningmoon.com"> 
-            <img src="./images/img_woman.jpg" alt="greenwood" width="500" height="600">
-        </a></p>
-        <p>Image by: Alexa Jade Frankelis (click on the image above to see her entire portfolio)</p>
-        <h3>Curatorial Statement</h3>
+        <h1>Visuals of The Occult</h1>
+        <h4> By: Alexa Jade Frankelis</h4>
         <p> The first spiritualists were heavily influenced by telecommunication technologies of the
             mid-nineteenth century like the telegraph. The Fox Sisters first interactions with the ghost of the
             peddler were labeled as the “Rochester Rappings”. Adapting with technology, the camera could
@@ -40,6 +35,10 @@
             The images in this show capture the subliminal space between these transformations,
             representing the muddled communications of mediums from the past and giving a depiction to
             the enigma of departure.</p>
+        <p> <a href="https://themourningmoon.com"> 
+            <img src="./images/img_woman.jpg" alt="greenwood" width="500" height="600">
+        </a></p>
+        <p>Image by: Alexa Jade Frankelis (click on the image above to see her entire portfolio)</p>
     </div>
 
 <div class="container" id="image-container">
