--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       
    <div class="gallery">
   <a target="_blank" href="./images/dynamismDog.jpg">
-    <img src=",/images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" width="600" height="400">
+    <img src="./images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" width="600" height="400">
   </a>
   <div class="desc">This exhibit delves into the revolutionary art movements of the early 20th century, 
                     including Futurism, Dada, and others from 1900 to 1930. 
@@ -73,7 +73,7 @@
 </div> 
 
       
-    <footer>
+    <div><footer>
         <p>&copy; Global Museum Gateway, 2024</p>
         <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
@@ -83,5 +83,6 @@
                 </a>
             </p>
     </footer>
+    </div>
 </body>
 </html>
