--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       
    <div class="gallery">
-  <a target="_blank" href="./images/dynamismDog.jpg">
+  <a target="_blank" href="exhibit1.html">
     <img src="./images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" width="600" height="400">
   </a>
   <div class="desc">This exhibit delves into the revolutionary art movements of the early 20th century, 
@@ -54,7 +54,7 @@
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="./images/img_mountains.jpg">
+  <a target="_blank" href="ramonasexhibit.html">
     <img src="./images/img_mountains.jpg" alt="Envisioning the Shtetl" width="600" height="400">
   </a>
   <div class="desc">Explore the intimate and poignant depiction of shtetl life in the visual arts of Eastern European 
@@ -64,7 +64,7 @@
 </div>
     
 <div class="gallery">
-  <a target="_blank" href="./images/img_woman.jpg">
+  <a target="_blank" href="exhibit4.html">
     <img src="./images/img_woman.jpg" alt="Visuals of The Occult" width="600" height="400">
   </a>
   <div class="desc">Journey into the mysterious realm of occult photography from the 19th to early 20th century. This exhibit 
