--- a/exhibit4.html
+++ b/exhibit4.html
@@ -96,7 +96,7 @@
 
 <div class="body">
     <h3>Wall Text</h3>
-    <p> The images displayed above are brought to you through the Open Acess Initiative at <a href="https://github.com/metmuseum/openaccess">The Metropolitan Museum</a> 
+    <p> The images displayed above are brought to you through the Open Access Initiative at <a href="https://github.com/metmuseum/openaccess">The Metropolitan Museum</a> 
         using Creative Commons Zero</p>
      <ol>
         <li><a href="https://www.metmuseum.org/art/collection/search/302466">The Ghost in the Stereoscope, Unknown, ca. 1852</a>
