--- a/exhibit4.html
+++ b/exhibit4.html
@@ -19,7 +19,7 @@
             <a href=exhibit1.html>Modern Art in Motion</a>
             <a href=.html>Cinema at War</a>
             <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
-            <a class="active" href=exhhibit4.html>Visuals of The Occult </a>
+            <a class="active" href=exhibit4.html>Visuals of The Occult </a>
         </div>
     </header>
 
