--- a/exhibit1.html
+++ b/exhibit1.html
@@ -4,78 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Modern Art in Motion</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="exhibit1style.css">
     </head>
     <body>
-            <style>
-                .navigation {
-                    background-color: antiquewhite;
-                    border-bottom: solid lightcoral;
-                    overflow: hidden;
-                    color: lightcoral;
-                }
-                .navigation a {
-                    float: left;
-                    text-align: center;
-                    padding: 10px;
-                    background-color: antiquewhite;
-                    color: lightcoral;
-                }
-                .navigation a:hover {
-                    background-color: grey;
-                    color: black;
-                }
-                .navigation a.active {
-                    background-color: lightcoral;
-                    color: black;
-                }
-                .column {
-                    float: left;
-                    width: 45%;
-                    padding: 10px;
-                }
-                .row:after {
-                    content: "";
-                    display: table;
-                    clear: both;
-                }
-                @media screen and (max-width: 600px) {
-                    .column {
-                        width: 100%;
-                    }
-                    }
-                img {
-                    max-width: 70%;
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                }
-                .game {
-                    margin: 5px 10%;
-                    padding: 5px;
-                    text-align: center;
-                    background-color: gray;
-                    border-radius: 35px;
-                }
-                .game img {
-                    max-width: 70%;
-                }
-                button {
-                    padding: 8px;
-                    border-radius: 40px;
-                    margin: 5px 10px;
-                    border: none;
-                }
-            </style>
         <div class="navigation">
             <h1>Global Museum Gateway: Curated Digital Exhibitions for All</h1>
             <a href=index.html>Home</a>
             <a href=about.html>About</a>
-            <a href=exhibit4.html>Visuals of The Occult</a>
-            <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
-            <a href=.html>Cinema at War</a>
             <a class="active" href=exhibit1.html>Modern Art in Motion</a>
+            <a href=.html>Cinema at War</a>
+            <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
+            <a href=exhibit4.html>Visuals of The Occult</a>
         </div>
+        
         <h1>Modern Art in Motion</h1>
         <h4>by Emily Drachman</h4>
         <p>Futurism and Dada are both movements that are part of early modernism, specifically around the years of World War One. 
@@ -333,6 +274,7 @@
             function incorrect4() {
                 document.getElementById("response4").innerHTML = "Incorrect, Try Again."
             }
+
             
         </script>
 
