--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <a target="_blank" href="exhibit1.html">
     <img src="./images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" width="600" height="400"></a>
   <a target="_blank" href="./images/img_snow.jpg">
-    <img src="./images/img_snow.jpg" alt="Exhibit 2: Cinema at War" width="600" height="400">
+    <img src="./images/excaw.jpg" alt="Exhibit 2: Cinema at War" width="600" height="400">
   </a>
   <a target="_blank" href="ramonasexhibit.html">
     <img src="./images/img_mountains.jpg" alt="Envisioning the Shtetl" width="600" height="400">
