--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="navigation">
             <h1>Global Museum Gateway: Curated Digital Exhibitions for All</h1>
             <a class="active" href=index.html>Home</a>
-            <a href=about.html>About</a>
+            <a href=aboutus.html>About</a>
             <a href=exhibit1.html>Modern Art in Motion</a>
-            <a href=.html>Cinema at War</a>
+            <a href=exhibit2.html>Cinema at War</a>
             <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
             <a href=exhibit4.html>Visuals of the Occult</a>
             
@@ -36,7 +36,7 @@
    <div class="gallery">
   <a target="_blank" href="exhibit1.html">
     <img src="./images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" width="600" height="400"></a>
-  <a target="_blank" href="./images/img_snow.jpg">
+  <a target="_blank" href="exhibit2.html">
     <img src="./images/excaw.jpg" alt="Exhibit 2: Cinema at War" width="600" height="400">
   </a>
   <a target="_blank" href="ramonasexhibit.html">
