--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
         <a class="active" href=aboutus.html>About</a>
         <a href=exhibit4.html>Visuals of The Occult</a>
         <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
-        <a href=.html>Cinema at War</a>
+        <a href=exhibit2.html>Cinema at War</a>
         <a href=exhibit1.html>Modern Art in Motion</a>
     </div>
 
