--- a/exhibit1.html
+++ b/exhibit1.html
@@ -10,13 +10,13 @@
         <div class="navigation">
             <h1>Global Museum Gateway: Curated Digital Exhibitions for All</h1>
             <a href=index.html>Home</a>
-            <a href=about.html>About</a>
+            <a href=aboutus.html>About</a>
             <a class="active" href=exhibit1.html>Modern Art in Motion</a>
-            <a href=.html>Cinema at War</a>
+            <a href=exhibit2.html>Cinema at War</a>
             <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
             <a href=exhibit4.html>Visuals of The Occult</a>
         </div>
-        
+
         <h1>Modern Art in Motion</h1>
         <h4>by Emily Drachman</h4>
         <p>Futurism and Dada are both movements that are part of early modernism, specifically around the years of World War One. 
