--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <img src="./images/excaw.jpg" alt="Exhibit 2: Cinema at War" width="600" height="400">
   </a>
   <a target="_blank" href="ramonasexhibit.html">
-    <img src="./images/img_mountains.jpg" alt="Envisioning the Shtetl" width="600" height="400">
+    <img src="./images/tevye.jpeg" alt="Envisioning the Shtetl" width="600" height="400">
   </a>
   <a target="_blank" href="exhibit4.html">
     <img src="./images/img_woman.jpg" alt="Visuals of The Occult" width="600" height="400">
