--- a/aboutus.html
+++ b/aboutus.html
@@ -47,9 +47,9 @@
                         <p>Alexa Jade Frankelis (She/ Her) is a researcher and visual artist based in New York City. As
                             a researcher, Alexa has published her papers and images about witchcraft, spirit
                             photography, and other occult subjects in many publications like A*DESK.org, LIFE Magazine,
-                            and Stephen Romano Gallery exhibition. Her main focuses are mysticism and the occult within
-                            19th to mid-20th century visual culture and theory. Alexa contributed to “What’s on view”
-                            page and “exhibit name here” page.
+                            and the Visionary Women Art Collective. Her main focuses are mysticism and the occult within
+                            19th to mid-20th century visual culture and theory. Alexa contributed to the HTML and content for the “What’s on view”
+                            page, and reflects her research / HTML + CSS design through her exhibit, "Visuals of the Occult". 
                         </p>
                     </div>
                 </div>
