--- a/aboutus.html
+++ b/aboutus.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="column">
                     <div class="aboutimg">
-                        <img src="images/alexa3.jpg" alt="alexa">
+                        <img src="images/alexa3.jpg" alt="alexa" width="600" height="400">
                         <h3> Alexa Frankelis</h3>
                         <p>Alexa Jade Frankelis (She/ Her) is a researcher and visual artist based in New York City. As
                             a researcher, Alexa has published her papers and images about witchcraft, spirit
