--- a/exhibit4.html
+++ b/exhibit4.html
@@ -17,7 +17,7 @@
             <a href=index.html>Home</a>
             <a href=about.html>About</a>
             <a href=exhibit1.html>Modern Art in Motion</a>
-            <a href=.html>Cinema at War</a>
+            <a href=exhibit2.html>Cinema at War</a>
             <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
             <a class="active" href=exhibit4.html>Visuals of The Occult </a>
         </div>
