--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="centerbody">
-        <img src="./images/decor.png" alt="dec" height="180px">
+        <img src="./images/decor.png" alt="dec" height="180">
         <h2>What's On View</h2>
         <p>Our curated digital exhibitions bring diverse facets of visual culture to life, 
             offering audiences an engaging exploration of art, film, and photography through 
