--- a/aboutus.html
+++ b/aboutus.html
@@ -77,7 +77,7 @@
                             spent 8 years in working in media production before joining Pratt Institute's School of
                             Information for graduate studies. With an avid interest in both creative fields and data
                             science, he strives to provide tools that blend the two and support cultural preservation.
-                            He worked on the CSS files for this website.</p>
+                            He worked on the "Cinema At War" exhibit page and the CSS file for the homepage and the for this website.</p>
 
                     </div>
                 </div>
