--- a/exhibit4.html
+++ b/exhibit4.html
@@ -15,7 +15,7 @@
             <div class="navigation">
             <h1>Global Museum Gateway: Curated Digital Exhibitions for All</h1>
             <a href=index.html>Home</a>
-            <a href=about.html>About</a>
+            <a href=aboutus.html>About</a>
             <a href=exhibit1.html>Modern Art in Motion</a>
             <a href=exhibit2.html>Cinema at War</a>
             <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
